Updated by task 'AUTO_HANDOFF_1756402570618' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/7cdea5d9c53b69a2aeff73b510f7160121456465

--- a/help/release-notes/universal-editor/2025/2025-08-14.md
+++ b/help/release-notes/universal-editor/2025/2025-08-14.md
@@ -3,17 +3,17 @@ title: Note sulla versione 2025.08.14 dell’editor universale
 description: Queste sono le note sulla versione 2025.08.14 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: 3df2c6470253f53019ecde70532d381f410cde36
-workflow-type: tm+mt
+exl-id: c6da6bd0-2fd4-43d2-8ee3-20132b148d1d
+source-git-commit: 0c9eb1309019a1d4c5a2648fdbfa76ff11562ed0
+workflow-type: ht
 source-wordcount: '233'
-ht-degree: 69%
+ht-degree: 100%
 
 ---
 
-
 # Note sulla versione 2025.08.14 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 14 agosto 2025 di Universal Editor.
+Queste sono le note sulla versione dell’editor universale del 14 agosto 2025.
 
 >[!TIP]
 >
@@ -21,8 +21,8 @@ Queste sono le note sulla versione del 14 agosto 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* Nuova funzionalità per [Utenti che utilizzano l&#39;editor Rich Text in anticipo](#new-rte)
-   * È stata aggiunta un’opzione di configurazione per disabilitare la destinazione nella finestra di dialogo Collegamento editor Rich Text.
+* Nuova funzionalità per i [primi utilizzatori dell’editor Rich Text](#new-rte)
+   * È stata aggiunta un’opzione di configurazione per disabilitare la destinazione nella finestra di dialogo con collegamento editor Rich Text.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -41,11 +41,11 @@ La funzione Annulla e Ripeti è ora disponibile per gli autori di contenuti dell
 
 ## Altri miglioramenti {#other-improvements}
 
-* È stato risolto un problema relativo allo scorrimento a schermo intero in [nuovo editor Rich Text](#new-rte).
+* È stato risolto un problema relativo allo scorrimento a schermo intero nel [nuovo editor Rich Text](#new-rte).
 * Il comportamento persistente durante la modifica dei campi condizionali è stato corretto.
 * `aem-content-fragment` è stato abilitato per il passaggio tra varianti.
 
-## Obsoleti {#deprecations}
+## Rimozioni {#deprecations}
 
 * I componenti `text-input` e `text-area` sono stati ufficialmente dichiarati obsoleti con la [versione 2025.07.09.](/help/release-notes/universal-editor/2025/2025-07-09.md)
    * In `model-definition.json`, utilizza il componente testo per creare input di testo per il pannello Proprietà.
