--- a/help/release-notes/universal-editor/2025/2025-07-31.md
+++ b/help/release-notes/universal-editor/2025/2025-07-31.md
@@ -3,17 +3,17 @@ title: Note sulla versione 2025.07.31 dell’editor universale
 description: Queste sono le note sulla versione 2025.07.31 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: fe3232591581b184cc33e826266dd0e26a713182
-workflow-type: tm+mt
+exl-id: f0715e9e-e619-4eca-a8c8-934d3ea4787b
+source-git-commit: f25027dd8b37d80ea61a2fb33fe6dcb63baa959f
+workflow-type: ht
 source-wordcount: '287'
-ht-degree: 56%
+ht-degree: 100%
 
 ---
 
-
 # Note sulla versione 2025.07.31 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 31 luglio 2025 di Universal Editor.
+Queste sono le note sulla versione del 31 luglio 2025 dell’editor universale.
 
 >[!TIP]
 >
@@ -21,15 +21,15 @@ Queste sono le note sulla versione del 31 luglio 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* [L&#39;opzione della barra degli strumenti dell&#39;intestazione di autenticazione](/help/sites-cloud/authoring/universal-editor/navigation.md#autentication-settings) rimane dietro un interruttore di funzionalità introdotto nella versione [2025.07.09.](/help/release-notes/universal-editor/2025/2025-07-09.md)
-   * Tuttavia, ora è attivata per impostazione predefinita.
-* Nuove funzionalità per [Utenti che utilizzano l&#39;editor Rich Text](#new-rte)
+* [L’opzione della barra degli strumenti dell’intestazione di autenticazione](/help/sites-cloud/authoring/universal-editor/navigation.md#autentication-settings) rimane dietro un pulsante di attivazione/disattivazione delle funzioni introdotto nella [versione 2025.07.09.](/help/release-notes/universal-editor/2025/2025-07-09.md)
+   * Tuttavia, ora è abilitata per impostazione predefinita.
+* Nuove funzionalità per i [primi utilizzatori editor Rich Text](#new-rte)
    * È stato aggiunto il supporto per la modalità scura.
    * È stato aggiunto il supporto per l’allineamento del testo.
-      * Disabilitata per impostazione predefinita e disponibile solo per progetti headless
-   * È stato aggiunto il supporto per il rientro.
-      * Disabilitata per impostazione predefinita e disponibile solo per progetti headless
-   * Le interruzioni (`<br>`) sono ora inserite al passaggio del mouse+Invio.
+      * Disabilitato per impostazione predefinita e disponibile solo per progetti headless
+   * È stato aggiunto il supporto per i rientri.
+      * Disabilitato per impostazione predefinita e disponibile solo per progetti headless
+   * Le interruzioni (`<br>`) vengono ora inserite con Maiusc+Invio.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -48,12 +48,12 @@ La funzione Annulla e Ripeti è ora disponibile per gli autori di contenuti dell
 
 ## Altri miglioramenti {#other-improvements}
 
-* Correzioni relative all’editor Rich Text di primo utilizzo
-   * Premendo Invio verrà creata una nuova voce di elenco (`<li>`) all&#39;interno di un elenco.
+* Correzioni per i primi utilizzatori dell’editor Rich Text
+   * Premendo Invio viene creata una nuova voce di elenco (`<li>`) all’interno di un elenco.
 * I video ora vengono aggiornati correttamente quando si utilizza DAM remoto.
-* È stato aggiunto il supporto per 6,5 LTS.
+* È stato aggiunto il supporto tecnico per 6.5 LTS.
 
-## Obsoleti {#deprecations}
+## Rimozioni {#deprecations}
 
 * I componenti `text-input` e `text-area` sono stati ufficialmente dichiarati obsoleti con la [versione 2025.07.09.](/help/release-notes/universal-editor/2025/2025-07-09.md)
    * In `model-definition.json`, utilizza il componente testo per creare input di testo per il pannello Proprietà.
