--- a/help/release-notes/universal-editor/2025/2025-09-11.md
+++ b/help/release-notes/universal-editor/2025/2025-09-11.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.09.18 dell’editor universale
-description: Queste sono le note sulla versione 2025.09.18 dell’editor universale.
+title: Note sulla versione 2025.09.11 dell’editor universale
+description: Queste sono le note sulla versione 2025.09.11 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
-source-git-commit: 34ae65fb0f6f69ac1983484da6ed020453ea4419
+source-git-commit: 7d930bfa070bd7ea2e519844b618585c7680c13e
 workflow-type: tm+mt
-source-wordcount: '212'
-ht-degree: 67%
+source-wordcount: '220'
+ht-degree: 100%
 
 ---
 
 
-# Note sulla versione 2025.09.18 dell’editor universale {#release-notes}
+# Note sulla versione 2025.09.11 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 18 settembre 2025 di Universal Editor.
+Queste sono le note sulla versione dell’11 settembre 2025 dell’editor universale.
 
 >[!TIP]
 >
@@ -22,8 +21,9 @@ Queste sono le note sulla versione del 18 settembre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* [universal-editor-service.adobe.io](http://universal-editor-service.adobe.io/) è ora utilizzato come endpoint del servizio per AMS invece di dover ospitare il servizio localmente.
-* I campi multipli compositi sono ora supportati quando si utilizza l’authoring AEM.
+* [Copia e incolla](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) è ora disponibile per i componenti all’interno dei contenitori sulla stessa pagina.
+* 6.5 LTS SP1 è ora supportato.
+* L’editor universale ora supporta [l’ereditarietà della gestione multisito](/help/sites-cloud/authoring/universal-editor/inheritance.md) per i frammenti di contenuto, inclusa l’interruzione automatica dell’ereditarietà quando viene modificato un frammento di contenuto Live Copy.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -31,7 +31,7 @@ Se ti interessa testare queste nuove funzioni e condividere un feedback, invia u
 
 ### Nuovo editor Rich Text {#new-rte}
 
-Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra di dialogo del collegamento, è ora disponibile nel pannello di destra. [Questo editor Rich Text offre opzioni di configurazione flessibili.](/help/implementing/universal-editor/configure-rte.md)
+Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra di dialogo del collegamento, è ora disponibile nel pannello di destra.
 
 ### Copia e incolla tra le pagine {#copy-paste}
 
